--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -11,6 +11,24 @@
   @apply border border-gray-700 dark:border-gray-100 rounded-md px-3 py-2 uppercase text-xs;
   
 }
+
+.rainbow-text {
+	@apply text-transparent bg-clip-text bg-gradient-to-r from-primary to-pink-600;
+}
+.rainbow-bg {
+	@apply bg-gradient-to-r from-primary to-pink-600;
+}
+
+.page-enter-active,
+.page-leave-active {
+	transition: all 0.3s ease-in-out;
+}
+
+.page-enter-from,
+.page-leave-to {
+	opacity: 0;
+	transform: scale(0.99);
+}
 /* 
 html.dark 
 .markdown p,
